<!--
  ~ MIT License Copyright (c) 2021. Tarek Bohdima
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of
  ~ this software and associated documentation files (the "Software"), to deal in
  ~ the Software without restriction, including without limitation the rights to
  ~ use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
  ~ of the Software, and to permit persons to whom the Software is furnished to do
  ~ so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  ~ This project was submitted by Tarek Bohdima as part of the Android Kotlin
  ~ Developer Nanodegree At Udacity. As part of Udacity Honor code, your
  ~ submissions must be your own work, hence submitting this project as yours will
  ~ cause you to break the Udacity Honor Code and the suspension of your account.
  ~ I, the author of the project, allow you to check the code as a reference, but
  ~ if you submit it, it's your own responsibility if you get expelled.
  -->

<resources>
    <string name="app_name" translatable="false">Asteroid Radar</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format" translatable="false">%f au</string>
    <string name="km_unit_format" translatable="false">%f km</string>
    <string name="km_s_unit_format" translatable="false">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="video_of_the_day_format">Video of the Day — %1$s</string>
    <string name="video_of_the_day_open">Open video in browser</string>
    <string name="astronomical_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="content_description_hazard_indicator">Hazard Indicator</string>
    <string name="asteroid_recycler_description">List of asteroids from NASA\'s NeoW feed</string>
    <string name="overflow_menu_description">Filter asteroids</string>
    <string name="back">Back</string>
</resources>
